--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         value="https://www.google.com/search?q=%s"
         type="hidden"
       />
-      <input id="uv-address" type="text" placeholder="Search the web freely" />
+      <input id="uv-address" type="text" placeholder="Enter Url" />
     </form>
     <div class="desc left-margin">
       <p id="uv-error"></p>
