--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>-----</title>
+    <title>Null</title>
     <meta
       name="description"
       content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
@@ -32,11 +32,15 @@
 
   <body>
     <div
-      title="Ultraviolet Logo"
       class="flex-center logo-wrapper header-center"
     >
       <img class="logo" src="uv.png" alt="Ultraviolet" />
       <h1>Xipher</h1>
+    </div>
+    <div class="flex-center desc">
+      <p>
+        Literally the best proxy ong. Xipher was made by a fatherlesss child for other fatherless kids.
+      </p>
     </div>
 
     <form id="uv-form" class="flex-center">
@@ -45,7 +49,7 @@
         value="https://www.google.com/search?q=%s"
         type="hidden"
       />
-      <input id="uv-address" type="text" placeholder="Enter Url" />
+      <input id="uv-address" type="text" placeholder="Browse anything with Xipher." />
     </form>
     <div class="desc left-margin">
       <p id="uv-error"></p>
